kubernetes-cluster/manifests/apps/outline/service.yml
apiVersion: v1
kind: Service
metadata:
  name: outline
  namespace: tools
spec:
  selector:
    app: outline
  ports:
  - name: outline
    port: 80
    targetPort: 3000
  - name: redis
    port: 6379
    targetPort: 6379
