kubernetes-cluster/manifests/apps/outline/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outline
  namespace: tools
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.org/websocket-services: "outline"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - outline.appchemy.co.za
    secretName: outline-tls
  rules:
  - host: outline.appchemy.co.za
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: outline
            port:
              number: 80
---
